REOPENED280079
The download should fail if we don't get a placeholder URL
https://bugs.webkit.org/show_bug.cgi?id=280079
Summary The download should fail if we don't get a placeholder URL
Per Arne Vollan
Reported 2024-09-20 12:03:23 PDT
The download should fail if we don't get a placeholder URL.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-20 12:03:40 PDT
Per Arne Vollan
Comment 2 2024-09-20 12:05:51 PDT
EWS
Comment 3 2024-09-20 16:01:47 PDT
Committed 284017@main (1f494fd0ee84): <https://commits.webkit.org/284017@main> Reviewed commits have been landed. Closing PR #33993 and removing active labels.
WebKit Commit Bot
Comment 4 2024-09-24 07:23:42 PDT
Re-opened since this is blocked by bug 280270
Note You need to log in before you can comment on or make changes to this bug.