The download should fail if we don't get a placeholder URL https://bugs.webkit.org/show_bug.cgi?id=280079 rdar://136378962

Reviewed by Chris Dumez.

If the system does not provide a placeholder URL, the download should fail, since we will
not get a URL to the completed download, either.

* Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::setPlaceholderURL):

Canonical link: https://commits.webkit.org/284017@main