Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm
@@ -169,8 +169,10 @@ void Download::publishProgress(const URL& url, std::span<const uint8_t> bookmark
 
 void Download::setPlaceholderURL(NSURL *placeholderURL, NSData *bookmarkData)
 {
-    if (!placeholderURL)
+    if (!placeholderURL) {
+        didFail({ }, { });
         return;
+    }
 
     m_placeholderURL = placeholderURL;
 
